--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 #    - USE_DGAMELAUNCH=1 EXTERNAL_DEFINES=-UTOURNEY
 #    - USE_DGAMELAUNCH=1 WEBTILES=1 EXTERNAL_DEFINES=-UTOURNEY
 #    - TILES=1 BUILD_ALL=1
-#    - WEBTILES=1 BUILD_ALL=1
+    - WEBTILES=1 BUILD_ALL=1
     - MONSTER=1
 git:
     submodules: false
