--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ env:
 #    - TILES=1
 #    - TILES=1 FULLDEBUG=1
 #    - WEBTILES=1
-    - WEBTILES=1 FULLDEBUG=1
+#    - WEBTILES=1 FULLDEBUG=1
 #    - USE_DGAMELAUNCH=1 EXTERNAL_DEFINES=-UTOURNEY
 #    - USE_DGAMELAUNCH=1 WEBTILES=1 EXTERNAL_DEFINES=-UTOURNEY
 #    - TILES=1 BUILD_ALL=1
 #    - WEBTILES=1 BUILD_ALL=1
+    - TILES=1 FULLDEBUG=1
     - MONSTER=1
 git:
     submodules: false
