--- a/crawl-ref/source/test/stress/qw.rc
+++ b/crawl-ref/source/test/stress/qw.rc
@@ -4333,7 +4333,7 @@ function plan_new_travel()
   if where == "Vaults:5" and you.have_rune("silver") then
     travel_destination = "D"
   end
-  if where == "D:15" then
+  if where == "D:$" then
     if you.num_runes() == 1 and not util.contains(c_persist.branches_entered, "V")
        or you.num_runes() == 2 and util.contains(c_persist.branches_entered, "U") then
       travel_destination = "V"
